# liu-proxy

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-github  README.md  github.Dockerfile
.github/workflows/: docker.yml  main.yml
config/: config.toml  routes.toml
src/: cli.rs  common.rs  lib.rs  main.rs  rt.rs  services.rs
src/cli/: app.rs  app_command.rs  build_geosite_command.rs  commands.rs  hello_command.rs  proxy_client_command.rs  proxy_server_command.rs
src/common/: auth_user.rs  client_config.rs  client_error.rs  config_error.rs  geoip.rs  geosite.rs  msg.rs  no_verify.rs  proxy_connect_result.rs  proxy_io_result.rs  proxy_request_result.rs  proxy_response_result.rs  route_config.rs  route_config_com.rs  server_config.rs  server_error.rs  server_stream.rs  socket5.rs  socks5.rs  websocket_request.rs
src/common/geoip/: ip_rule_group.rs  ip_rule_type.rs  private_cidr.rs
src/common/geosite/: domain_rule.rs  domain_rule_attr.rs  domain_rule_group.rs  domain_rule_type.rs  geosite_ns.rs
src/common/msg/: client.rs  client_message.rs  server.rs  server_message.rs
src/common/msg/client/: connect.rs  proxy_request.rs
src/common/msg/server/: connect_result.rs  proxy_response_result.rs  request_fail.rs
src/common/socket5/: address_type.rs  build_response_ns.rs  conn_dest.rs
src/common/socks5/: address_type.rs  build_response_ns.rs  conn_dest.rs
src/services/: geoip.rs  geosite.rs  load_config_ns.rs  poll_message.rs  proxy_client.rs  proxy_server.rs  read_raw_data.rs
src/services/geoip/: load_mmdb_ns.rs  parse.rs
src/services/geoip/parse/: parse_ip_selection.rs
src/services/geosite/: load.rs  parse.rs  save.rs
src/services/geosite/load/: from_binary_file.rs  from_source_dir.rs
src/services/geosite/parse/: parse_domain_selection.rs  parse_route_selection.rs
src/services/proxy_client/: auth_handshake_ns.rs  check_auth_token.rs  check_server_conn.rs  connection.rs  handle_connection.rs  handle_http_connection.rs  handle_socks5_connection.rs  http.rs  http_server.rs  io.rs  load_route_config.rs  poll_message.rs  proxy_error.rs  proxy_handshake.rs  proxy_response_stream.rs  proxy_tcp.rs  run_proxy_tcp_loop.rs  send_message.rs  server_conn_manger.rs  socks5_server.rs  stream.rs
src/services/proxy_client/connection/: conn_reader.rs  conn_writer.rs  connection_error.rs  remote_connection.rs
src/services/proxy_client/http/: build_request.rs  handle_connection.rs  parse_request.rs  proxy_handshake.rs  proxy_request.rs  read_request_loop.rs  run_proxy_request_loop.rs  write_handshake_response.rs
src/services/proxy_server/: check_auth.rs  check_auth_token.rs  check_auth_user.rs  client_io.rs  client_session.rs  handle_connection.rs  io.rs  poll_message.rs  proxy_error.rs  proxy_tcp.rs  read_remote_stream.rs  run_proxy_tcp_loop.rs  send_message.rs  tls.rs  wait_conn_remote.rs  ws_handler_ns.rs
web/: 404.html
web/public/: index.html
(+11 files in other folders)
