[package]
name = "liu-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.19", features = ["derive"] }
rustls = { version = "0.20.6", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
tokio-rustls = "0.23"
tokio-tungstenite = { version = "0.17.2", features = [
    "rustls-tls-webpki-roots",
] }
futures-util = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[dependencies.tokio]
version = "1.20.1"
features = [
    "fs",
    "net",
    "io-std",
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
    "signal",
    "time",
]
