[package]
name = "liu-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.19", features = ["derive"] }
rustls = { version = "0.20.6", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
tokio-rustls = "0.23"
tokio-tungstenite = { version = "0.17.2", features = [
    "rustls-tls-webpki-roots",
] }
futures-util = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
actix-web =  { version = "4", features = ["rustls"] }
actix-ws = "0.2.5"
actix-files = "0.6.2"
bytes = "1"
log = "0.4.0"
env_logger = "0.9.0"
httparse = "1.8.0"
sha1 = "0.10.5"
base64 = "0.13.0"

[dependencies.tokio]
version = "1.20.1"
features = [
    "fs",
    "net",
    "io-std",
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
    "signal",
    "time",
]
