[package]
name = "liu-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.19", features = ["derive"] }
rustls = { version = "0.20.6", features = ["dangerous_configuration"] }
tokio-rustls = "0.23"
tokio-tungstenite = { version = "0.17.2", features = [
    "rustls-tls-webpki-roots",
] }
futures-util = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
bytes = "1"
log = "0.4.0"
env_logger = "0.9.0"
httparse = "1.8.0"
sha1 = "0.10.5"
base64 = "0.13.0"
chrono = "0.4"
http = "0.2"
axum = { version = "0.5.16", features = ["ws","headers"] }
hyper ={version = "0.14.20",features = ["server", "tcp", "stream"]}
tower-http = { version = "0.3.0", features = ["fs"] }
axum-server = { version = "0.3", features = ["tls-rustls"] }
serde_repr = "0.1"
rmp-serde ="1.1.1"
regex = "1.6.0"
ipnet = "2.5.0"
maxminddb = "0.23.0"

[dependencies.tokio]
version = "1.20.1"
features = [
    "fs",
    "net",
    "io-std",
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
    "signal",
    "time",
]
